# classroom-transcripts

./: .coverage  .cursorrules  .env.example  .env.example.onepassword  .env.onepassword  .gitignore  Classroom-Transcripts.py  Classroom_Transcriber.py  Dockerfile  LICENSE  README.md  __azurite_db_blob_extent__.json  app.py  assembly_example.py  az-deploy.sh  build_env.sh  create_test_audio.py  entrypoint.sh  local.settings.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_env.py  transcription_function.py
.cursor/rules/: azure-use-sas.mdc
.devcontainer/: devcontainer.json
.github/workflows/: classroom-transcripts-AutoDeployTrigger-7f3cca96-827b-4384-b81f-b951ea9eb8c0.yml  classroom-transcripts-dev-AutoDeployTrigger-ea3e5c23-6288-4c3a-9ec3-227d2afe10af.yml  deploy.yml  integration-tests.yml
.streamlit/: config.toml
TranscriptionFunction/: __init__.py  function.json
code_samples/: assembly_sample.py  process_audio.ipynb
data/: short-classroom-sample.m4a
docs/: README.md  learning_cycles.md
functions/: local.settings.json.example
models/: user.py
pages/: 20_🎙️_OpenAI_Whisper.py  admin_dashboard.py  transcript_review.py  upload_recordings.py
scripts/: run_integration_tests.sh  view_table.sh
src/: app.py  dashboard.py  debug_table.py  transcript_detail_view.py  transcript_list_view.py  upload.py  user_profile.py
src/classroom_transcripts/: local.settings.json  transcription_function.py
src/classroom_transcripts/SubmitTranscription/: function.json
src/classroom_transcripts/TranscriptionFunction/: function.json
src/classroom_transcripts/WebhookHandler/: function.json
src/functions/: function_app.py  pyproject.toml  requirements.txt  transcription_function.py
src/functions/SubmitTranscription/: __init__.py  function.json  requirements.txt
src/functions/assemblyai-webhook-cloud-func/: .gcloudignore  app.py  deploy.sh  main.py  pyproject.toml  requirements.in  requirements.txt  webhook_test.sh  webhook_test_cloud.sh
src/functions/examples/: assembly_example.py
src/functions/tests/: test_blob_trigger.py  test_transcription.py
src/pages/: admin_dashboard.py  view_transcripts.py
src/utils/: __init__.py  add_test_entry.py  azure_storage.py  clear_table.py  google_drive.py  list_blobs.py  table_client.py  transcript_mapping.py  user_utils.py  view_table.py
streamlit/: app.py
streamlit/pages/: admin_dashboard.py
tests/: README.md  conftest.py  generate_test_audio.py  test_assemblyai.py  test_e2e.py  test_logging.py  test_transcript_mapping.py  test_transcript_review.py  test_transcription_function.py
tests/data/: README.md
tests/data/audio/: short-classroom-sample.m4a
tests/e2e/: test_e2e.py  test_transcription_workflow.py
tests/fixtures/: README.md  fixtures.py
tests/fixtures/responses/: assemblyai_completed.json  assemblyai_error.json  azure_storage.json
tests/integration/: test_transcription_function.py
tests/unit/: test_assemblyai.py  test_logging.py  test_requirements.py
tests/utils/: test_helpers.py
utils/: azure_storage.py  transcript_mapping.py
