[project]
name = "functions"
version = "0.1.0"
description = "Azure Functions app for classroom audio transcription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.21.3",
    "azure-functions-durable>=1.2.10",
    "assemblyai>=0.37.0",
    "azure-storage-blob>=12.24.1",
    "azure-identity>=1.19.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

[tool.uv.scripts]
generate-requirements = "uv pip compile pyproject.toml -o requirements.txt"
